[gd_scene load_steps=14 format=3 uid="uid://06msfyk4ukpy"]

[ext_resource type="Script" uid="uid://cthgk7lwet87r" path="res://scripts/popup_window.gd" id="1_lhay8"]
[ext_resource type="Texture2D" uid="uid://cnh77km8pq2jv" path="res://img/ui/popup/pop_up_background.png" id="2_2fdt4"]
[ext_resource type="Script" uid="uid://oj172dymblsc" path="res://scripts/button_animation.gd" id="3_8erbt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fdt4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8erbt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2fdt4"]
bg_color = Color(0.490196, 0.533333, 0.976471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8erbt"]
bg_color = Color(0.491466, 0.532646, 0.977889, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.313726)
shadow_size = 5

[sub_resource type="Animation" id="Animation_qcw0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8erbt"]
resource_name = "pop_up_animation"
length = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p8fdt"]
_data = {
&"RESET": SubResource("Animation_qcw0a"),
&"pop_up_animation": SubResource("Animation_8erbt")
}

[sub_resource type="Animation" id="Animation_fhso0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_p8fdt"]
resource_name = "pop_down_animation"
length = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhso0"]
_data = {
&"RESET": SubResource("Animation_fhso0"),
&"pop_down_animation": SubResource("Animation_p8fdt")
}

[node name="PopUpWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
script = ExtResource("1_lhay8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_2fdt4")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 110
theme_override_constants/margin_top = 110
theme_override_constants/margin_right = 110
theme_override_constants/margin_bottom = 110

[node name="Control" type="Control" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2fdt4")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="PopUpIcon" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("CompressedTexture2D_8erbt")
expand_mode = 3
stretch_mode = 5

[node name="PopUpTitle" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/bold_italics_font_size = 10
theme_override_font_sizes/italics_font_size = 10
theme_override_font_sizes/mono_font_size = 10
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 10
text = "WORKSHOP"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 75)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -41.5
offset_bottom = 41.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 35
theme_override_styles/hover = SubResource("StyleBoxFlat_2fdt4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2fdt4")
theme_override_styles/normal = SubResource("StyleBoxFlat_8erbt")
text = "CLOSE"
script = ExtResource("3_8erbt")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 310
theme_override_constants/v_separation = 310

[node name="PopUpAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p8fdt")
}

[node name="PopDownAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fhso0")
}

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Control/Button" to="." method="_on_button_pressed"]
